-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.3.0 Beta1, 5.3.0
-
None
Running apps with eglfs, moving the cursor and clicking a few times on various positions often results in the following assert:
ASSERT: "e->globalPos == QGuiApplicationPrivate::lastCursorPosition" in file kernel/qguiapplication.cpp, line 1622
Unfortunately b8d0fac5a92984c432271530e2d3560ec0f1d442 is also in the release branch. This needs some more investigation.
- is required for
-
QTBUG-37065 Issues to be fixed before 5.3.0 RC1 release
-
- Closed
-
| For Gerrit Dashboard: QTBUG-38597 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 84185,3 | Avoid reentering processMouseEvents on embedded | release | qt/qtbase | Status: MERGED | +2 | 0 |
| 106178,2 | QGuiApplication: revert b8d0fac5a9 (mouse event handling) | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |